2009-10-22  Marek Habersack  <mhabersack@novell.com>

	* ProfileBase.cs: put named entries into SettingProperty's
	Attributes collection based on custom attributes decorating the
	associated profile property.

	* CustomProviderDataAttribute.cs: implemented IsDefaultAttribute

2009-09-08  Marek Habersack  <mhabersack@novell.com>

	* ProfileParser.cs: GetProfileGroupType creates type name with
	"ProfileGroup" prefix instead of "ProfileCommon". Fixes bug
	#535655

	* ProfileBase.cs: typo fix - renamed CreateSettingsPropery to
	CreateSettingsProperty

2008-12-25 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* SqlProfileProvider.cs: use IndexOf (char).

2008-06-30  Marek Habersack  <mhabersack@novell.com>

	* SqliteProfileProvider.cs: remove unused method

2008-05-30  Marek Habersack  <mhabersack@novell.com>

	* ProfileModule.cs: do not use synthetized event accessors (to
	avoid locks).

2007-12-30  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* SqlProfileProvider.cs: added db schema checking

2007-12-13  Marek Habersack  <mhabersack@novell.com>

	* SqlProfileProvider.cs, ProfileParser.cs: speed optimization -
	use String.Concat instead of String.Format in some cases.

2007-12-12  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* ProfileParser.jvm.cs: Profile types loading optimized

2007-12-11  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* ProfileManager.cs: fixed Providers property to be thread safe

2007-12-08  Marek Habersack  <mhabersack@novell.com>

	* SqliteProfileProvider.cs: added - a Profile Provider for
        Sqlite, based on PostgreSQL Profile Provider code from Daniel
        Nauck <dna@informatik.uni-kiel.de>

2007-10-15  Marek Habersack  <mhabersack@novell.com>

	* ProfileBase.cs: use HttpApplication.LoadType instead of
	Type.GetType.

2007-08-14  Marek Habersack  <mhabersack@novell.com>

	* SqlProfileProvider.cs: remove unused variable.

2007-07-16  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* ProfileBase.cs: fixed typo bug in InitProperties
